--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg fixed-top">
+    <nav class="navbar navbar-expand-lg sticky-top navbar-light">
         <a class="navbar-brand" href="#">
             <img src="./assets/images/lacunalogo3.png" id="logo" alt="Lacuna Legal">
         </a>
@@ -39,18 +39,15 @@
     </nav>
 
 
-    <div class="bg">
+    <div class="bg"></div>
 
-    </div>
-
-
-        <div class="jumbotron jumbotron-fluid">
-            <div></div>
-            <div class="container">
-                <h1 class="display-4">Lacuna Legal</h1>
-                <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
-            </div>
+    <div class="jumbotron jumbotron-fluid">
+        <div class="container">
+            <h1 class="display-5">April Szabo</h1>
+            <p class="lead">With 17 years of employer defense to her name, April provides businesses with a detailed, thorough approach to
+                workplace compliance and litigation.</p>
         </div>
+    </div>
 
 
 
