--- a/index.html
+++ b/index.html
@@ -39,15 +39,19 @@
     </nav>
 
 
-    <div class="bg"></div>
+    <div class="bg">
 
-    <div class="jumbotron jumbotron-fluid">
-        <div class="container">
-            <h1 class="display-5">April Szabo</h1>
-            <p class="lead">With 17 years of employer defense to her name, April provides businesses with a detailed, thorough approach to
-                workplace compliance and litigation.</p>
+        <div class="jumbotron jumbotron-fluid">
+            <div class="container">
+                <h1 class="display-5">April Szabo</h1>
+                <p class="lead">With 17 years of employer defense to her name, April provides businesses with a detailed, thorough approach to workplace
+                    compliance and litigation.</p>
+            </div>
         </div>
+        
     </div>
+
+    
 
 
 
