--- a/index.html
+++ b/index.html
@@ -45,18 +45,12 @@
 
 
     <div class="bg">
-        <figure class="figure">
-            <img src="..." class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure.">
-            <figcaption class="figure-caption">A caption for the above image.</figcaption>
-        </figure>
-
-        <div class="jumbotron jumbotron-fluid">
-            <div class="container">
+       
+            <div class="overlay">
                 <!-- <h1 class="display-5">April Szabo</h1> -->
                 <p class="lead">With 17 years of employer defense to our name, Lacuna Legal provides businesses with a detailed, thorough approach to workplace
                     compliance and litigation.</p>
             </div>
-        </div>
         
     </div>
 
