--- a/index.html
+++ b/index.html
@@ -25,10 +25,12 @@
             </div>
         </div>
         <div class='panel panel-body lacunadescription'>
-
-            <span>With 17 years of employer defense to our name, Lacuna Legal provides businesses with a detailed, thorough approach to workplace
-            compliance and litigation.</span>
-            <div id="myGreetingSkills"></div>
+            <span><p>Lacuna Legal addresses the diverse needs of law firms in southern California. Great achievement periodically requires some
+            outside expertise and Lacuna is designed to fill the gap with deep experience, careful attention to detail and commitment
+            to the success of your project.</p>
+            <p>With 17 years of employer defense to our name, Lacuna Legal provides businesses with a detailed, thorough approach to workplace
+            compliance and litigation.</p></span>
+            <!-- <div id="myGreetingSkills"></div> -->
             
         </div>
 
