--- a/index.html
+++ b/index.html
@@ -8,35 +8,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4"
         crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="./main.js"></script>
-    
+    <link rel="stylesheet" type="text/css" media="screen" href="main.css"/>
 </head>
 
 <body>
-   
-
     <div class='bg'>
-
         <div class="panel panel-heading lacunalogo">
             <div>
                 <img src="./assets/images/lacunalogo3.png" id="logo" alt="Lacuna Legal">
             </div>
         </div>
-        <div class='panel panel-body lacunadescription'>
-            <span><p>Lacuna Legal addresses the diverse needs of law firms in southern California. Great achievement periodically requires some
+        <div class='lacunadescription'>
+            <p>Lacuna Legal addresses the diverse needs of law firms in southern California. Great achievement periodically requires some
             outside expertise and Lacuna is designed to fill the gap with deep experience, careful attention to detail and commitment
             to the success of your project.</p>
             <p>With 17 years of employer defense to our name, Lacuna Legal provides businesses with a detailed, thorough approach to workplace
-            compliance and litigation.</p></span>
-            <!-- <div id="myGreetingSkills"></div> -->
-            
+            compliance and litigation.</p>
         </div>
-
     </div>
-
-
 </body>
 
 </html>
