--- a/index.html
+++ b/index.html
@@ -12,20 +12,29 @@
 </head>
 
 <body>
-    <div class='bg'>
-        <div class="panel panel-heading lacunalogo">
-            <div>
-                <img src="./assets/images/lacunalogo3.png" id="logo" alt="Lacuna Legal">
-            </div>
+
+    <div class='container-fluid bg'>
+        <div class='row nocontent'>
+            <div class='col-sm-12'></div>
         </div>
-        <div class='lacunadescription'>
-            <p>Lacuna Legal addresses the diverse needs of law firms in southern California. Great achievement periodically requires some
-            outside expertise and Lacuna is designed to fill the gap with deep experience, careful attention to detail and commitment
-            to the success of your project.</p>
-            <p>With 17 years of employer defense to our name, Lacuna Legal provides businesses with a detailed, thorough approach to workplace
-            compliance and litigation.</p>
+        <div class='row contenta'>
+            <div class='col-md-2'></div>
+            <div class='col-12 col-md-8 d-flex align-items-center log'><img src="./assets/images/lacunalogo3.png" id="logo" alt="Lacuna Legal"></div>
+            <div class='col-md-2'></div>
+        </div>
+        <div class='row contentb'>
+            <div class='col-md-2'></div>
+            <div class='col-12 col-md-8 log'>
+                <p class='pt-3'>Lacuna Legal addresses the diverse needs of law firms in southern California. Great achievement periodically requires some
+                    outside expertise and Lacuna is designed to fill the gap with deep experience, careful attention to detail and commitment
+                    to the success of your project.</p>
+                <p>With 17 years of employer defense to our name, Lacuna Legal provides businesses with a detailed, thorough approach to workplace
+                    compliance and litigation.</p>
+            </div>
+            <div class='col-md-2'></div>
         </div>
     </div>
+
 </body>
 
 </html>
